--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tailwind:build": "npx tailwindcss -i ./src/tailwind.css -o ./src/index.css --minify"
   },
   "dependencies": {
     "axios": "^1.11.0",
