--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "tailwind:build": "npx tailwindcss -i ./src/tailwind.css -o ./src/index.css --minify"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "lucide-react": "^0.542.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
     "zustand": "^5.0.8"
@@ -25,6 +24,7 @@
     "@eslint/js": "^9.25.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.7.0",
